# lyricat-api

./: README.md  main.py  pyproject.toml  requirements.txt  vercel.json
controllers/: music_controller.py
routes/: music.py
services/: gemini_service.py  music_service.py
utils/: logger.py
